添加若干文章

--- a/themes/landscape-plus/_config.yml
+++ b/themes/landscape-plus/_config.yml
@@ -23,6 +23,7 @@ widgets:
 links:
   好易思特官网: http://www.haoest.com
   好易思特星际战区: http://sc2.haoest.com
+  HADB.ME: http://hadb.me
 
 # Miscellaneous
 google_analytics:
